--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "scripts": {
     "build": "webpack --config config/prod.webpack.config.js",
+    "clean": "rm -r dist",
     "lint": "npm-run-all lint:*",
     "lint:js": "eslint config src",
     "lint:sass": "stylelint 'src/**/*.scss' --config .stylelint.json",
